# fileSharing

./: .gitignore  README.md
client/desktop/: CMakeLists.txt  icons.qrc
client/desktop/qml/: FileRow.qml  FileTable.qml  FileUploadArea.qml  HoverIcon.qml  MainView.qml  Sidebar.qml
client/desktop/src/: FileDialogHelper.h  MainWindow.cpp  MainWindow.h  main.cpp
client/qt_client/: CMakeLists.txt  vcpkg.json
client/qt_client/qml/: AppTopBar.qml  FileRow.qml  FileTable.qml  FileUploadArea.qml  Login.qml  Main.qml  MainView.qml  NavButton.qml  Register.qml  Sidebar.qml
client/qt_client/src/: LoginHandler.cpp  LoginHandler.h  RegisterHandler.h  christheclass.cpp  christheclass.h  config.cpp  config.h  main.cpp  registerhandler.cpp
client/qt_client/src/handlers/: LoginHandler.cpp  LoginHandler.h  RegisterHandler.h  downloadfilehandler.cpp  downloadfilehandler.h  filedownloadhandler.cpp  filedownloadhandler.h  filelisthandler.cpp  filelisthandler.h  filesharehandler.cpp  filesharehandler.h  fileuploadhandler.cpp  fileuploadhandler.h  passwordchangehandler.cpp  passwordchangehandler.h  registerhandler.cpp
client/qt_client/src/utils/: NetworkAuthUtils.h  clientstore.cpp  clientstore.h  handlerutils.h
client/qt_client/src/utils/crypto/: FileClientData.h  cryptobase.h  derutils.cpp  derutils.h  hash.cpp  hash.h  kdf.cpp  kdf.h  kem.h  kem_ecdh.cpp  kem_ecdh.h  keybundle.cpp  keybundle.h  signer.h  signer_dilithium.cpp  signer_dilithium.h  signer_ed.cpp  signer_ed.h  symmetric.cpp  symmetric.h
client/qt_client/src/utils/networking/: HttpResult.h  asiohttpclient.cpp  asiohttpclient.h  asiosslclient.cpp  asiosslclient.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  networkclient.cpp  networkclient.h  signinghelper.cpp  signinghelper.h
client/webapp/filestoragewebapp/: .env.example  .gitignore  .npmrc  drizzle.config.ts  google-drive-clone.tsx  index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/webapp/filestoragewebapp/src/: App.tsx  argon2-browser.d.ts  main.tsx
client/webapp/filestoragewebapp/src/app/: google-drive-clone.tsx  layout.tsx  mockdata.ts  page.tsx
client/webapp/filestoragewebapp/src/app/drive/: DriveMain.tsx  driveTypes.ts  useDriveFiles.ts  useFetchFiles.ts  useFileActions.ts  useFileUpload.ts  useKeyValidation.ts  useRetryFetch.ts
client/webapp/filestoragewebapp/src/app/drive/utils/: encryption.ts
client/webapp/filestoragewebapp/src/components/: AuthPage.tsx  DriveList.tsx
client/webapp/filestoragewebapp/src/lib/: types.ts
client/webapp/filestoragewebapp/src/lib/crypto/: KeyHelper.ts  KeyUtils.ts  encryptor.ts
client/webapp/filestoragewebapp/src/server/db/: schema.ts
client/webapp/filestoragewebapp/src/styles/: globals.css
client/webapp/filestoragewebapp/src/types/: argon2-browser.d.ts  libsodium-wrappers.d.ts
server/: .gitignore  TESTING_DB.sqlite  drizzle.config.ts  index.ts  package-lock.json  package.json  tsconfig.json  undefined
server/drizzle/: 0000_hard_klaw.sql  0000_huge_may_parker.sql  0000_lovely_thunderbolt.sql  0000_mighty_terrax.sql  0000_slim_kabuki.sql  0000_square_miek.sql  0000_tiny_psylocke.sql
server/drizzle/meta/: 0000_snapshot.json  _journal.json
server/encrypted-drive/: 0173443d-9d44-47c0-9af6-604b31c004c3.enc  03334746-800a-4681-94a4-e47c4b5e8fcf.enc  0932c88b-4425-4408-9a69-a57c1807f146.enc  12acda15-67b4-401d-8355-809118a41b7b.enc  15f57136-f85c-40d3-90d9-fa42c729eb75.enc  20a935b3-5cce-4658-9701-d1aa9a5ca333.enc  2c7bd4a0-f2bf-4705-8eb9-a099b66168b6.enc  33bb9838-458c-433a-8f75-5fe89f875365.enc  343186b8-0c59-4227-8cbe-abff7c162c00.enc  36f87577-b0e8-43cf-a97d-802e87151644.enc  3aa21214-696b-442f-8473-8f4d1d34a020.enc  3effecc3-21d9-48a4-9498-bbce8faebc01.enc  414f5cc0-af91-4e59-a605-f63b1a08b9e2.enc  435058e7-1c3f-47d3-b686-3dc8023f83cf.enc  4eccc2c5-334c-4322-b3ae-4ca939e77e11.enc  51531468-caa0-4ca9-a343-a171baa86872.enc  603e0b9b-4a89-461f-94fe-12b5251a29b3.enc  6e3dd0c4-4db4-44d1-a620-08ae2263e58c.enc  6f2db7d0-e28c-48fa-9ad4-5fa8edee07c8.enc  7115d075-8e85-40a6-9d3e-b181a8e38a76.enc  71650c49-8106-4c54-a01a-6621c9e35ac3.enc  728f5b78-1b45-4fe0-89fe-c23a8f92a1d3.enc  7f4248ab-03d0-4cdb-bb66-5373948b493c.enc  8b98363d-0763-4272-8bc4-d6fd09c563b2.enc  8e61fd34-6f97-4113-9b55-2ab1d3c9000e.enc  8fbdba3c-ace5-4231-83e4-72ab9137529f.enc  90db2eea-a02c-4949-94f1-eb649424b9fc.enc  93ad36e7-0a5a-4013-860d-cb25b9dac004.enc  9a4bbed3-c76c-4742-a12e-694562f1f4b8.enc  9bf3d0c6-852b-4424-83a9-160c73572de7.enc  9c2657c8-95bf-4a68-bb2f-af0b25908df3.enc  9cf28d2b-b1c4-4ad1-98a5-838431a8d363.enc  9e2020e7-ff0d-4483-a639-026a99a5b6ed.enc  a3b8834e-9bad-4881-88ae-118e38e9fea9.enc  b6a4bf67-99e2-4c41-befa-d150b2b7c413.enc  c5b14b0a-3e2d-46ce-b126-22fde96cf779.enc  c90f1b0d-5af6-4084-8a3c-1e09cc4e296d.enc  cb70f9ab-74c4-4785-a4e0-136e5fed83bc.enc  db828b81-80f0-43e4-90aa-8192aed8ef0a.enc  dfbed349-b7ee-45d0-b326-6995ba16570b.enc  (+5 more)
server/src/api/auth/login/: route.ts
server/src/api/auth/register/: route.ts
server/src/api/auth/salt/: route.ts
server/src/api/fs/delete/: route.ts
server/src/api/fs/download/: route.ts
server/src/api/fs/list/: route.ts
server/src/api/fs/revoke/: route.ts
server/src/api/fs/share/: route.ts
server/src/api/fs/upload/: route.ts
server/src/api/keyhandler/getbundle/: route.ts
server/src/api/keyhandler/register/: route.ts
server/src/db/: index.ts  schema.ts
server/src/middleware/: ratelimit.ts
server/src/tests/: auth.test.ts  fileDelete.test.ts  fileDownload.test.ts  fileList.test.ts  fileRevoke.test.ts  fileSharing.test.ts  fileTestUtils.ts  fileUpload.test.ts  getBundle.test.ts  register.test.ts  setup.ts
server/src/utils/: common.ts  schema.ts
server/src/utils/crypto/: FileEncryption.ts  KeyHelper.ts  NetworkingHelper.ts
